@@ -13,9 +13,12 @@
 // limitations under the License.
 package com.google.devtools.build.lib.remote;
 
+import static com.google.common.base.Preconditions.checkState;
 import static com.google.common.base.Throwables.throwIfInstanceOf;
 import static com.google.common.truth.Truth.assertThat;
+import static com.google.common.truth.Truth.assertWithMessage;
 import static com.google.devtools.build.lib.actions.util.ActionsTestUtil.createTreeArtifactWithGeneratingAction;
+import static com.google.devtools.build.lib.remote.util.Utils.getFromFuture;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.Assert.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
@@ -23,6 +26,7 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import com.google.common.collect.ImmutableList;
@@ -32,6 +36,8 @@ import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.SettableFuture;
 import com.google.devtools.build.lib.actions.ActionInput;
+import com.google.devtools.build.lib.actions.ActionInputPrefetcher.MetadataSupplier;
+import com.google.devtools.build.lib.actions.ActionInputPrefetcher.Priority;
 import com.google.devtools.build.lib.actions.Artifact;
 import com.google.devtools.build.lib.actions.Artifact.SpecialArtifact;
 import com.google.devtools.build.lib.actions.Artifact.TreeFileArtifact;
@@ -40,22 +46,21 @@ import com.google.devtools.build.lib.actions.ArtifactRoot.RootType;
 import com.google.devtools.build.lib.actions.ExecException;
 import com.google.devtools.build.lib.actions.FileArtifactValue;
 import com.google.devtools.build.lib.actions.FileArtifactValue.RemoteFileArtifactValue;
-import com.google.devtools.build.lib.actions.MetadataProvider;
 import com.google.devtools.build.lib.actions.util.ActionsTestUtil;
-import com.google.devtools.build.lib.clock.JavaClock;
-import com.google.devtools.build.lib.remote.util.StaticMetadataProvider;
 import com.google.devtools.build.lib.remote.util.TempPathGenerator;
 import com.google.devtools.build.lib.skyframe.TreeArtifactValue;
+import com.google.devtools.build.lib.testing.vfs.SpiedFileSystem;
 import com.google.devtools.build.lib.util.Pair;
 import com.google.devtools.build.lib.vfs.DigestHashFunction;
-import com.google.devtools.build.lib.vfs.FileSystem;
+import com.google.devtools.build.lib.vfs.Dirent;
 import com.google.devtools.build.lib.vfs.FileSystemUtils;
 import com.google.devtools.build.lib.vfs.Path;
 import com.google.devtools.build.lib.vfs.PathFragment;
-import com.google.devtools.build.lib.vfs.inmemoryfs.InMemoryFileSystem;
+import com.google.devtools.build.lib.vfs.Symlinks;
 import java.io.IOException;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.concurrent.CancellationException;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -68,14 +73,14 @@ import org.junit.Test;
 public abstract class ActionInputPrefetcherTestBase {
   protected static final DigestHashFunction HASH_FUNCTION = DigestHashFunction.SHA256;
 
-  protected FileSystem fs;
+  protected SpiedFileSystem fs;
   protected Path execRoot;
   protected ArtifactRoot artifactRoot;
   protected TempPathGenerator tempPathGenerator;
 
   @Before
   public void setUp() throws IOException {
-    fs = new InMemoryFileSystem(new JavaClock(), HASH_FUNCTION);
+    fs = SpiedFileSystem.createInMemorySpy();
     execRoot = fs.getPath("/exec");
     execRoot.createDirectoryAndParents();
     artifactRoot = ArtifactRoot.asDerivedRoot(execRoot, RootType.Output, "root");
@@ -90,7 +95,7 @@ public abstract class ActionInputPrefetcherTestBase {
       String contents,
       @Nullable PathFragment materializationExecPath,
       Map<ActionInput, FileArtifactValue> metadata,
-      Map<HashCode, byte[]> cas) {
+      @Nullable Map<HashCode, byte[]> cas) {
     Path p = artifactRoot.getRoot().getRelative(pathFragment);
     Artifact a = ActionsTestUtil.createArtifact(artifactRoot, p);
     byte[] contentsBytes = contents.getBytes(UTF_8);
@@ -100,10 +105,12 @@ public abstract class ActionInputPrefetcherTestBase {
             hashCode.asBytes(),
             contentsBytes.length,
             /* locationIndex= */ 1,
-            "action-id",
+            /* expireAtEpochMilli= */ -1,
             materializationExecPath);
     metadata.put(a, f);
-    cas.put(hashCode, contentsBytes);
+    if (cas != null) {
+      cas.put(hashCode, contentsBytes);
+    }
     return a;
   }
 
@@ -111,50 +118,76 @@ public abstract class ActionInputPrefetcherTestBase {
       String pathFragment,
       String contents,
       Map<ActionInput, FileArtifactValue> metadata,
-      Map<HashCode, byte[]> cas) {
+      @Nullable Map<HashCode, byte[]> cas) {
     return createRemoteArtifact(
         pathFragment, contents, /* materializationExecPath= */ null, metadata, cas);
   }
 
   protected Pair<SpecialArtifact, ImmutableList<TreeFileArtifact>> createRemoteTreeArtifact(
       String pathFragment,
-      Map<String, String> contentMap,
+      Map<String, String> localContentMap,
+      Map<String, String> remoteContentMap,
       @Nullable PathFragment materializationExecPath,
       Map<ActionInput, FileArtifactValue> metadata,
       Map<HashCode, byte[]> cas)
       throws IOException {
     SpecialArtifact parent = createTreeArtifactWithGeneratingAction(artifactRoot, pathFragment);
+
     parent.getPath().createDirectoryAndParents();
     parent.getPath().chmod(0555);
+
     TreeArtifactValue.Builder treeBuilder = TreeArtifactValue.newBuilder(parent);
-    for (Map.Entry<String, String> entry : contentMap.entrySet()) {
-      byte[] contentsBytes = entry.getValue().getBytes(UTF_8);
-      HashCode hashCode = HASH_FUNCTION.getHashFunction().hashBytes(contentsBytes);
+    for (Map.Entry<String, String> entry : localContentMap.entrySet()) {
       TreeFileArtifact child =
           TreeFileArtifact.createTreeOutput(parent, PathFragment.create(entry.getKey()));
-      RemoteFileArtifactValue childValue =
-          RemoteFileArtifactValue.create(
-              hashCode.asBytes(), contentsBytes.length, /* locationIndex= */ 1, "action-id");
+      byte[] contents = entry.getValue().getBytes(UTF_8);
+      HashCode hashCode = HASH_FUNCTION.getHashFunction().hashBytes(contents);
+      FileArtifactValue childValue =
+          FileArtifactValue.createForNormalFile(
+              hashCode.asBytes(), /* proxy= */ null, contents.length);
       treeBuilder.putChild(child, childValue);
       metadata.put(child, childValue);
-      cas.put(hashCode, contentsBytes);
+      cas.put(hashCode, contents);
+    }
+    for (Map.Entry<String, String> entry : remoteContentMap.entrySet()) {
+      TreeFileArtifact child =
+          TreeFileArtifact.createTreeOutput(parent, PathFragment.create(entry.getKey()));
+      byte[] contents = entry.getValue().getBytes(UTF_8);
+      HashCode hashCode = HASH_FUNCTION.getHashFunction().hashBytes(contents);
+      RemoteFileArtifactValue childValue =
+          RemoteFileArtifactValue.create(
+              hashCode.asBytes(),
+              contents.length,
+              /* locationIndex= */ 1,
+              /* expireAtEpochMilli= */ -1);
+      treeBuilder.putChild(child, childValue);
+      metadata.put(child, childValue);
+      cas.put(hashCode, contents);
     }
     if (materializationExecPath != null) {
       treeBuilder.setMaterializationExecPath(materializationExecPath);
     }
     TreeArtifactValue treeValue = treeBuilder.build();
+
     metadata.put(parent, treeValue.getMetadata());
+
     return Pair.of(parent, treeValue.getChildren().asList());
   }
 
   protected Pair<SpecialArtifact, ImmutableList<TreeFileArtifact>> createRemoteTreeArtifact(
       String pathFragment,
-      Map<String, String> contentMap,
+      Map<String, String> localContentMap,
+      Map<String, String> remoteContentMap,
       Map<ActionInput, FileArtifactValue> metadata,
       Map<HashCode, byte[]> cas)
       throws IOException {
     return createRemoteTreeArtifact(
-        pathFragment, contentMap, /* materializationExecPath= */ null, metadata, cas);
+        pathFragment,
+        localContentMap,
+        remoteContentMap,
+        /* materializationExecPath= */ null,
+        metadata,
+        cas);
   }
 
   protected abstract AbstractActionInputPrefetcher createPrefetcher(Map<HashCode, byte[]> cas);
@@ -166,12 +199,11 @@ public abstract class ActionInputPrefetcherTestBase {
     Map<HashCode, byte[]> cas = new HashMap<>();
     Artifact a = createRemoteArtifact("file", "hello world", metadata, cas);
     FileSystemUtils.writeContent(a.getPath(), "hello world".getBytes(UTF_8));
-    MetadataProvider metadataProvider = new StaticMetadataProvider(metadata);
     AbstractActionInputPrefetcher prefetcher = spy(createPrefetcher(cas));
 
-    wait(prefetcher.prefetchFiles(metadata.keySet(), metadataProvider));
+    wait(prefetcher.prefetchFiles(metadata.keySet(), metadata::get, Priority.MEDIUM));
 
-    verify(prefetcher, never()).doDownloadFile(any(), any(), any(), any());
+    verify(prefetcher, never()).doDownloadFile(any(), any(), any(), any(), any());
     assertThat(prefetcher.downloadedFiles()).containsExactly(a.getPath());
     assertThat(prefetcher.downloadsInProgress()).isEmpty();
   }
@@ -183,12 +215,11 @@ public abstract class ActionInputPrefetcherTestBase {
     Map<HashCode, byte[]> cas = new HashMap<>();
     Artifact a = createRemoteArtifact("file", "hello world remote", metadata, cas);
     FileSystemUtils.writeContent(a.getPath(), "hello world local".getBytes(UTF_8));
-    MetadataProvider metadataProvider = new StaticMetadataProvider(metadata);
     AbstractActionInputPrefetcher prefetcher = spy(createPrefetcher(cas));
 
-    wait(prefetcher.prefetchFiles(metadata.keySet(), metadataProvider));
+    wait(prefetcher.prefetchFiles(metadata.keySet(), metadata::get, Priority.MEDIUM));
 
-    verify(prefetcher).doDownloadFile(any(), eq(a.getExecPath()), any(), any());
+    verify(prefetcher).doDownloadFile(any(), any(), eq(a.getExecPath()), any(), any());
     assertThat(prefetcher.downloadedFiles()).containsExactly(a.getPath());
     assertThat(prefetcher.downloadsInProgress()).isEmpty();
     assertThat(FileSystemUtils.readContent(a.getPath(), UTF_8)).isEqualTo("hello world remote");
@@ -200,10 +231,9 @@ public abstract class ActionInputPrefetcherTestBase {
     Map<HashCode, byte[]> cas = new HashMap<>();
     Artifact a1 = createRemoteArtifact("file1", "hello world", metadata, cas);
     Artifact a2 = createRemoteArtifact("file2", "fizz buzz", metadata, cas);
-    MetadataProvider metadataProvider = new StaticMetadataProvider(metadata);
     AbstractActionInputPrefetcher prefetcher = createPrefetcher(cas);
 
-    wait(prefetcher.prefetchFiles(metadata.keySet(), metadataProvider));
+    wait(prefetcher.prefetchFiles(metadata.keySet(), metadata::get, Priority.MEDIUM));
 
     assertThat(FileSystemUtils.readContent(a1.getPath(), UTF_8)).isEqualTo("hello world");
     assertReadableNonWritableAndExecutable(a1.getPath());
@@ -214,15 +244,14 @@ public abstract class ActionInputPrefetcherTestBase {
   }
 
   @Test
-  public void prefetchFiles_downloadRemoteFiles_withmaterializationExecPath() throws Exception {
+  public void prefetchFiles_downloadRemoteFiles_withMaterializationExecPath() throws Exception {
     Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
     Map<HashCode, byte[]> cas = new HashMap<>();
     PathFragment targetExecPath = artifactRoot.getExecPath().getChild("target");
     Artifact a = createRemoteArtifact("file", "hello world", targetExecPath, metadata, cas);
-    MetadataProvider metadataProvider = new StaticMetadataProvider(metadata);
     AbstractActionInputPrefetcher prefetcher = createPrefetcher(cas);
 
-    wait(prefetcher.prefetchFiles(metadata.keySet(), metadataProvider));
+    wait(prefetcher.prefetchFiles(metadata.keySet(), metadata::get, Priority.MEDIUM));
 
     assertThat(a.getPath().isSymbolicLink()).isTrue();
     assertThat(a.getPath().readSymbolicLink())
@@ -237,76 +266,109 @@ public abstract class ActionInputPrefetcherTestBase {
   public void prefetchFiles_downloadRemoteTrees() throws Exception {
     Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
     Map<HashCode, byte[]> cas = new HashMap<>();
-    Pair<SpecialArtifact, ImmutableList<TreeFileArtifact>> tree =
+    Pair<SpecialArtifact, ImmutableList<TreeFileArtifact>> treeAndChildren =
         createRemoteTreeArtifact(
             "dir",
-            ImmutableMap.of("file1", "content1", "nested_dir/file2", "content2"),
+            /* localContentMap= */ ImmutableMap.of(),
+            /* remoteContentMap= */ ImmutableMap.of(
+                "file1", "content1", "nested_dir/file2", "content2"),
             metadata,
             cas);
-    SpecialArtifact parent = tree.getFirst();
-    Artifact firstChild = tree.getSecond().get(0);
-    Artifact secondChild = tree.getSecond().get(1);
+    SpecialArtifact tree = treeAndChildren.getFirst();
+    ImmutableList<TreeFileArtifact> children = treeAndChildren.getSecond();
+    Artifact firstChild = children.get(0);
+    Artifact secondChild = children.get(1);
 
-    MetadataProvider metadataProvider = new StaticMetadataProvider(metadata);
     AbstractActionInputPrefetcher prefetcher = createPrefetcher(cas);
 
-    wait(prefetcher.prefetchFiles(tree.getSecond(), metadataProvider));
+    wait(prefetcher.prefetchFiles(children, metadata::get, Priority.MEDIUM));
 
-    assertReadableNonWritableAndExecutable(parent.getPath());
     assertThat(FileSystemUtils.readContent(firstChild.getPath(), UTF_8)).isEqualTo("content1");
-    assertReadableNonWritableAndExecutable(firstChild.getPath());
     assertThat(FileSystemUtils.readContent(secondChild.getPath(), UTF_8)).isEqualTo("content2");
-    assertReadableNonWritableAndExecutable(secondChild.getPath());
-    assertThat(prefetcher.downloadedFiles()).containsExactly(parent.getPath());
+
+    assertTreeReadableNonWritableAndExecutable(tree.getPath());
+
+    assertThat(prefetcher.downloadedFiles())
+        .containsExactly(firstChild.getPath(), secondChild.getPath());
     assertThat(prefetcher.downloadsInProgress()).isEmpty();
-    assertReadableNonWritableAndExecutable(parent.getPath().getRelative("nested_dir"));
   }
 
   @Test
-  public void prefetchFiles_downloadRemoteTrees_withmaterializationExecPath() throws Exception {
+  public void prefetchFiles_downloadRemoteTrees_partial() throws Exception {
+    Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
+    Map<HashCode, byte[]> cas = new HashMap<>();
+    Pair<SpecialArtifact, ImmutableList<TreeFileArtifact>> treeAndChildren =
+        createRemoteTreeArtifact(
+            "dir",
+            /* localContentMap= */ ImmutableMap.of("file1", "content1"),
+            /* remoteContentMap= */ ImmutableMap.of("file2", "content2"),
+            metadata,
+            cas);
+    SpecialArtifact tree = treeAndChildren.getFirst();
+    ImmutableList<TreeFileArtifact> children = treeAndChildren.getSecond();
+    Artifact firstChild = children.get(0);
+    Artifact secondChild = children.get(1);
+
+    AbstractActionInputPrefetcher prefetcher = createPrefetcher(cas);
+
+    wait(
+        prefetcher.prefetchFiles(
+            ImmutableList.of(firstChild, secondChild), metadata::get, Priority.MEDIUM));
+
+    assertThat(firstChild.getPath().exists()).isFalse();
+    assertThat(FileSystemUtils.readContent(secondChild.getPath(), UTF_8)).isEqualTo("content2");
+    assertTreeReadableNonWritableAndExecutable(tree.getPath());
+    assertThat(prefetcher.downloadedFiles()).containsExactly(secondChild.getPath());
+  }
+
+  @Test
+  public void prefetchFiles_downloadRemoteTrees_withMaterializationExecPath() throws Exception {
     Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
     Map<HashCode, byte[]> cas = new HashMap<>();
     PathFragment targetExecPath = artifactRoot.getExecPath().getChild("target");
-    Pair<SpecialArtifact, ImmutableList<TreeFileArtifact>> tree =
+    Pair<SpecialArtifact, ImmutableList<TreeFileArtifact>> treeAndChildren =
         createRemoteTreeArtifact(
             "dir",
-            ImmutableMap.of("file1", "content1", "nested_dir/file2", "content2"),
+            /* localContentMap= */ ImmutableMap.of(),
+            /* remoteContentMap= */ ImmutableMap.of(
+                "file1", "content1", "nested_dir/file2", "content2"),
             targetExecPath,
             metadata,
             cas);
-    SpecialArtifact parent = tree.getFirst();
-    Artifact firstChild = tree.getSecond().get(0);
-    Artifact secondChild = tree.getSecond().get(1);
+    SpecialArtifact tree = treeAndChildren.getFirst();
+    ImmutableList<TreeFileArtifact> children = treeAndChildren.getSecond();
+    Artifact firstChild = children.get(0);
+    Artifact secondChild = children.get(1);
 
-    MetadataProvider metadataProvider = new StaticMetadataProvider(metadata);
     AbstractActionInputPrefetcher prefetcher = createPrefetcher(cas);
 
-    wait(prefetcher.prefetchFiles(tree.getSecond(), metadataProvider));
+    wait(prefetcher.prefetchFiles(children, metadata::get, Priority.MEDIUM));
 
-    assertThat(parent.getPath().isSymbolicLink()).isTrue();
-    assertThat(parent.getPath().readSymbolicLink())
+    assertThat(tree.getPath().isSymbolicLink()).isTrue();
+    assertThat(tree.getPath().readSymbolicLink())
         .isEqualTo(execRoot.getRelative(targetExecPath).asFragment());
-    assertReadableNonWritableAndExecutable(parent.getPath());
     assertThat(FileSystemUtils.readContent(firstChild.getPath(), UTF_8)).isEqualTo("content1");
-    assertReadableNonWritableAndExecutable(firstChild.getPath());
     assertThat(FileSystemUtils.readContent(secondChild.getPath(), UTF_8)).isEqualTo("content2");
-    assertReadableNonWritableAndExecutable(secondChild.getPath());
+
+    assertTreeReadableNonWritableAndExecutable(execRoot.getRelative(targetExecPath));
+
     assertThat(prefetcher.downloadedFiles())
-        .containsExactly(parent.getPath(), execRoot.getRelative(targetExecPath));
+        .containsExactly(
+            tree.getPath(),
+            execRoot.getRelative(targetExecPath.getRelative(firstChild.getParentRelativePath())),
+            execRoot.getRelative(targetExecPath.getRelative(secondChild.getParentRelativePath())));
     assertThat(prefetcher.downloadsInProgress()).isEmpty();
-    assertReadableNonWritableAndExecutable(parent.getPath().getRelative("nested_dir"));
   }
 
   @Test
   public void prefetchFiles_missingFiles_fails() throws Exception {
     Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
     Artifact a = createRemoteArtifact("file1", "hello world", metadata, /* cas= */ new HashMap<>());
-    MetadataProvider metadataProvider = new StaticMetadataProvider(metadata);
     AbstractActionInputPrefetcher prefetcher = createPrefetcher(new HashMap<>());
 
     assertThrows(
         Exception.class,
-        () -> wait(prefetcher.prefetchFiles(ImmutableList.of(a), metadataProvider)));
+        () -> wait(prefetcher.prefetchFiles(ImmutableList.of(a), metadata::get, Priority.MEDIUM)));
 
     assertThat(prefetcher.downloadedFiles()).isEmpty();
     assertThat(prefetcher.downloadsInProgress()).isEmpty();
@@ -314,19 +376,73 @@ public abstract class ActionInputPrefetcherTestBase {
 
   @Test
   public void prefetchFiles_ignoreNonRemoteFiles() throws Exception {
-    // Test that files that are not remote are not downloaded
+    // Test that non-remote files are not downloaded.
 
     Path p = execRoot.getRelative(artifactRoot.getExecPath()).getRelative("file1");
     FileSystemUtils.writeContent(p, UTF_8, "hello world");
     Artifact a = ActionsTestUtil.createArtifact(artifactRoot, p);
     FileArtifactValue f = FileArtifactValue.createForTesting(a);
-    MetadataProvider metadataProvider = new StaticMetadataProvider(ImmutableMap.of(a, f));
+    ImmutableMap<ActionInput, FileArtifactValue> metadata = ImmutableMap.of(a, f);
     AbstractActionInputPrefetcher prefetcher = createPrefetcher(new HashMap<>());
 
-    wait(prefetcher.prefetchFiles(ImmutableList.of(a), metadataProvider));
+    wait(prefetcher.prefetchFiles(ImmutableList.of(a), metadata::get, Priority.MEDIUM));
 
     assertThat(prefetcher.downloadedFiles()).isEmpty();
     assertThat(prefetcher.downloadsInProgress()).isEmpty();
+  }
+
+  @Test
+  public void prefetchFiles_ignoreNonRemoteFiles_tree() throws Exception {
+    // Test that non-remote tree files are not downloaded, but other files in the tree are.
+
+    Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
+    Map<HashCode, byte[]> cas = new HashMap<>();
+    Pair<SpecialArtifact, ImmutableList<TreeFileArtifact>> treeAndChildren =
+        createRemoteTreeArtifact(
+            "dir",
+            ImmutableMap.of("file1", "content1"),
+            ImmutableMap.of("file2", "content2"),
+            metadata,
+            cas);
+    SpecialArtifact tree = treeAndChildren.getFirst();
+    ImmutableList<TreeFileArtifact> children = treeAndChildren.getSecond();
+    Artifact firstChild = children.get(0);
+    Artifact secondChild = children.get(1);
+
+    AbstractActionInputPrefetcher prefetcher = createPrefetcher(cas);
+
+    wait(prefetcher.prefetchFiles(children, metadata::get, Priority.MEDIUM));
+
+    assertThat(firstChild.getPath().exists()).isFalse();
+    assertThat(FileSystemUtils.readContent(secondChild.getPath(), UTF_8)).isEqualTo("content2");
+    assertTreeReadableNonWritableAndExecutable(tree.getPath());
+    assertThat(prefetcher.downloadedFiles()).containsExactly(secondChild.getPath());
+  }
+
+  @Test
+  public void prefetchFiles_treeFiles_minimizeFilesystemOperations() throws Exception {
+    Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
+    Map<HashCode, byte[]> cas = new HashMap<>();
+    Pair<SpecialArtifact, ImmutableList<TreeFileArtifact>> treeAndChildren =
+        createRemoteTreeArtifact(
+            "dir",
+            /* localContentMap= */ ImmutableMap.of("subdir/file1", "content1"),
+            /* remoteContentMap= */ ImmutableMap.of("subdir/file2", "content2"),
+            metadata,
+            cas);
+    SpecialArtifact tree = treeAndChildren.getFirst();
+    ImmutableList<TreeFileArtifact> children = treeAndChildren.getSecond();
+    Artifact firstChild = children.get(0);
+    Artifact secondChild = children.get(1);
+
+    AbstractActionInputPrefetcher prefetcher = createPrefetcher(cas);
+
+    wait(
+        prefetcher.prefetchFiles(
+            ImmutableList.of(firstChild, secondChild), metadata::get, Priority.MEDIUM));
+
+    verify(fs, times(1)).createWritableDirectory(tree.getPath().asFragment());
+    verify(fs, times(1)).createWritableDirectory(tree.getPath().getChild("subdir").asFragment());
   }
 
   @Test
@@ -337,7 +453,6 @@ public abstract class ActionInputPrefetcherTestBase {
     Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
     Map<HashCode, byte[]> cas = new HashMap<>();
     Artifact artifact = createRemoteArtifact("file1", "hello world", metadata, cas);
-    MetadataProvider metadataProvider = new StaticMetadataProvider(metadata);
 
     AbstractActionInputPrefetcher prefetcher = spy(createPrefetcher(cas));
     SettableFuture<Void> downloadThatNeverFinishes = SettableFuture.create();
@@ -347,7 +462,9 @@ public abstract class ActionInputPrefetcherTestBase {
         new Thread(
             () -> {
               try {
-                wait(prefetcher.prefetchFiles(ImmutableList.of(artifact), metadataProvider));
+                wait(
+                    prefetcher.prefetchFiles(
+                        ImmutableList.of(artifact), metadata::get, Priority.MEDIUM));
               } catch (IOException | ExecException | InterruptedException ignored) {
                 // do nothing
               }
@@ -357,7 +474,9 @@ public abstract class ActionInputPrefetcherTestBase {
         new Thread(
             () -> {
               try {
-                wait(prefetcher.prefetchFiles(ImmutableList.of(artifact), metadataProvider));
+                wait(
+                    prefetcher.prefetchFiles(
+                        ImmutableList.of(artifact), metadata::get, Priority.MEDIUM));
               } catch (IOException | ExecException | InterruptedException ignored) {
                 // do nothing
               }
@@ -386,7 +505,6 @@ public abstract class ActionInputPrefetcherTestBase {
     Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
     Map<HashCode, byte[]> cas = new HashMap<>();
     Artifact artifact = createRemoteArtifact("file1", "hello world", metadata, cas);
-    MetadataProvider metadataProvider = new StaticMetadataProvider(metadata);
     SettableFuture<Void> download = SettableFuture.create();
     AbstractActionInputPrefetcher prefetcher = spy(createPrefetcher(cas));
     mockDownload(prefetcher, cas, () -> download);
@@ -394,7 +512,9 @@ public abstract class ActionInputPrefetcherTestBase {
         new Thread(
             () -> {
               try {
-                wait(prefetcher.prefetchFiles(ImmutableList.of(artifact), metadataProvider));
+                wait(
+                    prefetcher.prefetchFiles(
+                        ImmutableList.of(artifact), metadata::get, Priority.MEDIUM));
               } catch (IOException | ExecException | InterruptedException ignored) {
                 // do nothing
               }
@@ -405,7 +525,9 @@ public abstract class ActionInputPrefetcherTestBase {
         new Thread(
             () -> {
               try {
-                wait(prefetcher.prefetchFiles(ImmutableList.of(artifact), metadataProvider));
+                wait(
+                    prefetcher.prefetchFiles(
+                        ImmutableList.of(artifact), metadata::get, Priority.MEDIUM));
                 successful.set(true);
               } catch (IOException | ExecException | InterruptedException ignored) {
                 // do nothing
@@ -436,22 +558,26 @@ public abstract class ActionInputPrefetcherTestBase {
   }
 
   @Test
-  public void downloadFile_downloadRemoteFiles() throws Exception {
+  public void prefetchFile_interruptingMetadataSupplier_interruptsDownload() throws Exception {
     Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
     Map<HashCode, byte[]> cas = new HashMap<>();
     Artifact a1 = createRemoteArtifact("file1", "hello world", metadata, cas);
     AbstractActionInputPrefetcher prefetcher = createPrefetcher(cas);
 
-    prefetcher.downloadFile(a1.getPath(), metadata.get(a1));
+    MetadataSupplier interruptedMetadataSupplier =
+        unused -> {
+          throw new InterruptedException();
+        };
 
-    assertThat(FileSystemUtils.readContent(a1.getPath(), UTF_8)).isEqualTo("hello world");
-    assertThat(a1.getPath().isExecutable()).isTrue();
-    assertThat(a1.getPath().isReadable()).isTrue();
-    assertThat(a1.getPath().isWritable()).isFalse();
+    ListenableFuture<Void> future =
+        prefetcher.prefetchFiles(
+            ImmutableList.of(a1), interruptedMetadataSupplier, Priority.MEDIUM);
+
+    assertThrows(CancellationException.class, future::get);
   }
 
   @Test
-  public void downloadFile_onInterrupt_deletePartialDownloadedFile() throws Exception {
+  public void prefetchFiles_onInterrupt_deletePartialDownloadedFile() throws Exception {
     Semaphore startSemaphore = new Semaphore(0);
     Semaphore endSemaphore = new Semaphore(0);
     Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
@@ -471,7 +597,8 @@ public abstract class ActionInputPrefetcherTestBase {
         new Thread(
             () -> {
               try {
-                prefetcher.downloadFile(a1.getPath(), metadata.get(a1));
+                getFromFuture(
+                    prefetcher.prefetchFiles(ImmutableList.of(a1), metadata::get, Priority.MEDIUM));
               } catch (IOException ignored) {
                 // Intentionally left empty
               } catch (InterruptedException e) {
@@ -489,6 +616,20 @@ public abstract class ActionInputPrefetcherTestBase {
     assertThat(tempPathGenerator.getTempDir().getDirectoryEntries()).isEmpty();
   }
 
+  @Test
+  public void missingInputs_addedToList() {
+    Map<ActionInput, FileArtifactValue> metadata = new HashMap<>();
+    Map<HashCode, byte[]> cas = new HashMap<>();
+    Artifact a = createRemoteArtifact("file", "hello world", metadata, /* cas= */ null);
+    AbstractActionInputPrefetcher prefetcher = createPrefetcher(cas);
+
+    assertThrows(
+        Exception.class,
+        () -> wait(prefetcher.prefetchFiles(metadata.keySet(), metadata::get, Priority.MEDIUM)));
+
+    assertThat(prefetcher.getMissingActionInputs()).contains(a);
+  }
+
   protected static void wait(ListenableFuture<Void> future)
       throws IOException, ExecException, InterruptedException {
     try {
@@ -503,7 +644,7 @@ public abstract class ActionInputPrefetcherTestBase {
       }
       throw new IOException(e);
     } catch (InterruptedException e) {
-      future.cancel(/*mayInterruptIfRunning=*/ true);
+      future.cancel(/* mayInterruptIfRunning= */ true);
       throw e;
     }
   }
@@ -515,8 +656,8 @@ public abstract class ActionInputPrefetcherTestBase {
       throws IOException {
     doAnswer(
             invocation -> {
-              Path path = invocation.getArgument(0);
-              FileArtifactValue metadata = invocation.getArgument(2);
+              Path path = invocation.getArgument(1);
+              FileArtifactValue metadata = invocation.getArgument(3);
               byte[] content = cas.get(HashCode.fromBytes(metadata.getDigest()));
               if (content == null) {
                 return Futures.immediateFailedFuture(new IOException("Not found"));
@@ -525,12 +666,22 @@ public abstract class ActionInputPrefetcherTestBase {
               return resultSupplier.get();
             })
         .when(prefetcher)
-        .doDownloadFile(any(), any(), any(), any());
+        .doDownloadFile(any(), any(), any(), any(), any());
   }
 
   private void assertReadableNonWritableAndExecutable(Path path) throws IOException {
-    assertThat(path.isReadable()).isTrue();
-    assertThat(path.isWritable()).isFalse();
-    assertThat(path.isExecutable()).isTrue();
+    assertWithMessage(path + " should be readable").that(path.isReadable()).isTrue();
+    assertWithMessage(path + " should not be writable").that(path.isWritable()).isFalse();
+    assertWithMessage(path + " should be executable").that(path.isExecutable()).isTrue();
+  }
+
+  private void assertTreeReadableNonWritableAndExecutable(Path path) throws IOException {
+    checkState(path.isDirectory());
+    assertReadableNonWritableAndExecutable(path);
+    for (Dirent dirent : path.readdir(Symlinks.NOFOLLOW)) {
+      if (dirent.getType().equals(Dirent.Type.DIRECTORY)) {
+        assertTreeReadableNonWritableAndExecutable(path.getChild(dirent.getName()));
+      }
+    }
   }
 }
